[css] fixup list spacing

--- a/www.jxck.io/assets/css/article.css
+++ b/www.jxck.io/assets/css/article.css
@@ -25,12 +25,12 @@ article ol {
 }
 
 article li {
-  margin-bottom: 0.4em;
+  margin-bottom: 0.2em;
 }
 
 article ul li ul,
 article ol li ol {
-  margin: 0.2em 0 1.2em 1em;
+  margin: 0.2em 0 0.2em 1em;
   font-size: 1em;
 }
 
